--- a/NN/tables/results.tex
+++ b/NN/tables/results.tex
@@ -1,43 +1,37 @@
 
     \begin{table*}
         \centering
-        \begin{tabular}{llllll}
+        \begin{tabular}{llrlrr}
 \hline
+ model                               & R2          &   MSE & hidden sizes   &   total hs &   epochs \\
 \hline
- model                               & R2          & MSE                 & hidden sizes   & total hs   & epochs   \\
-\hline
- Relu2HiddenLayer                    & 89.8 ± 1.2  & 0.09000000357627869 & [15, 5]        & 20         & 10       \\
- Relu1HiddenLayer                    & 86.6 ± 3.4  & 0.11999999731779099 & [8, 4]         & 12         & 10       \\
- GRNN                                & 86.2 ± 6.4  & 0.11999999731779099 & [15, 5]        & 20         & 10       \\
- Relu1HiddenLayer                    & 83.5 ± 8.9  & 0.14000000059604645 & [15, 10, 3]    & 28         & 10       \\
- Relu2HiddenLayer                    & 76.7 ± 20.2 & 0.20000000298023224 & [8, 4]         & 12         & 10       \\
- Tanh2HiddenLayer                    & 75.4 ± 13.4 & 0.2199999988079071  & [8, 4]         & 12         & 10       \\
- \multirow{2}{*}{GRNN}               & 74.3 ± 6.8  & 0.2199999988079071  & [8, 4]         & 12         & 10       \\
- GRNN                                & 73.1 ± 20.5 & 0.23999999463558197 & [15, 10, 3]    & 28         & 10       \\
-                                     &             &                     &                &            &          \\
- FFNN                                & 71.3 ± 0.2  & 0.25                & [15, 5]        & 20         & 10       \\
- Tanh1HiddenLayer                    & 69.2 ± 4.1  & 0.27000001072883606 & [15, 10, 3]    & 28         & 10       \\
- Relu1HiddenLayer                    & 67.1 ± 4.8  & 0.28999999165534973 & [15, 5]        & 20         & 10       \\
- \multirow{2}{*}{Tanh1HiddenLayer}   & 65.6 ± 10.5 & 0.30000001192092896 & [8, 4]         & 12         & 10       \\
- Tanh1HiddenLayer                    & 61.9 ± 17.7 & 0.33000001311302185 & [15, 5]        & 20         & 10       \\
-                                     &             &                     &                &            &          \\
- FFNN                                & 60.4 ± 3.9  & 0.3499999940395355  & [8, 4]         & 12         & 10       \\
- Relu2HiddenLayer                    & 57.8 ± 37.0 & 0.3700000047683716  & [15, 10, 3]    & 28         & 10       \\
- Linear1HiddenLayer                  & 55.9 ± 12.3 & 0.38999998569488525 & [15, 5]        & 20         & 10       \\
- \multirow{2}{*}{Tanh2HiddenLayer}   & 55.4 ± 24.3 & 0.38999998569488525 & [15, 10, 3]    & 28         & 10       \\
- Tanh2HiddenLayer                    & 55.4 ± 26.8 & 0.38999998569488525 & [15, 5]        & 20         & 10       \\
-                                     &             &                     &                &            &          \\
- Linear1HiddenLayer                  & 54.4 ± 29.7 & 0.4000000059604645  & [15, 10, 3]    & 28         & 10       \\
- FFNN                                & 54.4 ± 8.4  & 0.4000000059604645  & [15, 10, 3]    & 28         & 10       \\
- Linear1HiddenLayer                  & 53.6 ± 11.7 & 0.4099999964237213  & [8, 4]         & 12         & 10       \\
- \multirow{3}{*}{Linear2HiddenLayer} & 40.5 ± 14.4 & 0.5199999809265137  & [15, 5]        & 20         & 10       \\
- Linear2HiddenLayer                  & 36.4 ± 13.0 & 0.5600000023841858  & [8, 4]         & 12         & 10       \\
- Linear2HiddenLayer                  & 8.2 ± 16.7  & 0.800000011920929   & [15, 10, 3]    & 28         & 10       \\
-                                     &             &                     &                &            &          \\
- \multirow{3}{*}{RBFN}               & -0.3 ± 3.1  & 0.8799999952316284  & [15, 5]        & 20         & 10       \\
- RBFN                                & -1.8 ± 1.8  & 0.8899999856948853  & [8, 4]         & 12         & 10       \\
- RBFN                                & -5.5 ± 5.0  & 0.9200000166893005  & [15, 10, 3]    & 28         & 10       \\
-                                     &             &                     &                &            &          \\
+ Relu2HiddenLayer                    & 89.8 ± 1.2  &  0.09 & [15, 5]        &         20 &       10 \\
+ Relu1HiddenLayer                    & 86.6 ± 3.4  &  0.12 & [8, 4]         &         12 &       10 \\
+ GRNN                                & 86.2 ± 6.4  &  0.12 & [15, 5]        &         20 &       10 \\
+ Relu1HiddenLayer                    & 83.5 ± 8.9  &  0.14 & [15, 10, 3]    &         28 &       10 \\
+ Relu2HiddenLayer                    & 76.7 ± 20.2 &  0.2  & [8, 4]         &         12 &       10 \\
+ Tanh2HiddenLayer                    & 75.4 ± 13.4 &  0.22 & [8, 4]         &         12 &       10 \\
+ \multirow{2}{*}{GRNN}               & 74.3 ± 6.8  &  0.22 & [8, 4]         &         12 &       10 \\
+                                     & 73.1 ± 20.5 &  0.24 & [15, 10, 3]    &         28 &       10 \\
+ FFNN                                & 71.3 ± 0.2  &  0.25 & [15, 5]        &         20 &       10 \\
+ Tanh1HiddenLayer                    & 69.2 ± 4.1  &  0.27 & [15, 10, 3]    &         28 &       10 \\
+ Relu1HiddenLayer                    & 67.1 ± 4.8  &  0.29 & [15, 5]        &         20 &       10 \\
+ \multirow{2}{*}{Tanh1HiddenLayer}   & 65.6 ± 10.5 &  0.3  & [8, 4]         &         12 &       10 \\
+                                     & 61.9 ± 17.7 &  0.33 & [15, 5]        &         20 &       10 \\
+ FFNN                                & 60.4 ± 3.9  &  0.35 & [8, 4]         &         12 &       10 \\
+ Relu2HiddenLayer                    & 57.8 ± 37.0 &  0.37 & [15, 10, 3]    &         28 &       10 \\
+ Linear1HiddenLayer                  & 55.9 ± 12.3 &  0.39 & [15, 5]        &         20 &       10 \\
+ \multirow{2}{*}{Tanh2HiddenLayer}   & 55.4 ± 24.3 &  0.39 & [15, 10, 3]    &         28 &       10 \\
+                                     & 55.4 ± 26.8 &  0.39 & [15, 5]        &         20 &       10 \\
+ Linear1HiddenLayer                  & 54.4 ± 29.7 &  0.4  & [15, 10, 3]    &         28 &       10 \\
+ FFNN                                & 54.4 ± 8.4  &  0.4  & [15, 10, 3]    &         28 &       10 \\
+ Linear1HiddenLayer                  & 53.6 ± 11.7 &  0.41 & [8, 4]         &         12 &       10 \\
+ \multirow{3}{*}{Linear2HiddenLayer} & 40.5 ± 14.4 &  0.52 & [15, 5]        &         20 &       10 \\
+                                     & 36.4 ± 13.0 &  0.56 & [8, 4]         &         12 &       10 \\
+                                     & 8.2 ± 16.7  &  0.8  & [15, 10, 3]    &         28 &       10 \\
+ \multirow{3}{*}{RBFN}               & -0.3 ± 3.1  &  0.88 & [15, 5]        &         20 &       10 \\
+                                     & -1.8 ± 1.8  &  0.89 & [8, 4]         &         12 &       10 \\
+                                     & -5.5 ± 5.0  &  0.92 & [15, 10, 3]    &         28 &       10 \\
 \hline
 \end{tabular}
         \caption{Results of different models}
