--- a/NN/tables/results.tex
+++ b/NN/tables/results.tex
@@ -3,35 +3,37 @@
         \centering
         \begin{tabular}{llrlrr}
 \hline
- model                               & R2          &   MSE & hidden sizes   &   total hs &   epochs \\
+ model                        & R2          &   MSE & hidden sizes   &   total hs &   epochs \\
 \hline
- Relu2HiddenLayer                    & 89.8 ± 1.2  &  0.09 & [15, 5]        &         20 &       10 \\
- Relu1HiddenLayer                    & 86.6 ± 3.4  &  0.12 & [8, 4]         &         12 &       10 \\
- GRNN                                & 86.2 ± 6.4  &  0.12 & [15, 5]        &         20 &       10 \\
- Relu1HiddenLayer                    & 83.5 ± 8.9  &  0.14 & [15, 10, 3]    &         28 &       10 \\
- Relu2HiddenLayer                    & 76.7 ± 20.2 &  0.2  & [8, 4]         &         12 &       10 \\
- Tanh2HiddenLayer                    & 75.4 ± 13.4 &  0.22 & [8, 4]         &         12 &       10 \\
- \multirow{2}{*}{GRNN}               & 74.3 ± 6.8  &  0.22 & [8, 4]         &         12 &       10 \\
-                                     & 73.1 ± 20.5 &  0.24 & [15, 10, 3]    &         28 &       10 \\
- FFNN                                & 71.3 ± 0.2  &  0.25 & [15, 5]        &         20 &       10 \\
- Tanh1HiddenLayer                    & 69.2 ± 4.1  &  0.27 & [15, 10, 3]    &         28 &       10 \\
- Relu1HiddenLayer                    & 67.1 ± 4.8  &  0.29 & [15, 5]        &         20 &       10 \\
- \multirow{2}{*}{Tanh1HiddenLayer}   & 65.6 ± 10.5 &  0.3  & [8, 4]         &         12 &       10 \\
-                                     & 61.9 ± 17.7 &  0.33 & [15, 5]        &         20 &       10 \\
- FFNN                                & 60.4 ± 3.9  &  0.35 & [8, 4]         &         12 &       10 \\
- Relu2HiddenLayer                    & 57.8 ± 37.0 &  0.37 & [15, 10, 3]    &         28 &       10 \\
- Linear1HiddenLayer                  & 55.9 ± 12.3 &  0.39 & [15, 5]        &         20 &       10 \\
- \multirow{2}{*}{Tanh2HiddenLayer}   & 55.4 ± 24.3 &  0.39 & [15, 10, 3]    &         28 &       10 \\
-                                     & 55.4 ± 26.8 &  0.39 & [15, 5]        &         20 &       10 \\
- Linear1HiddenLayer                  & 54.4 ± 29.7 &  0.4  & [15, 10, 3]    &         28 &       10 \\
- FFNN                                & 54.4 ± 8.4  &  0.4  & [15, 10, 3]    &         28 &       10 \\
- Linear1HiddenLayer                  & 53.6 ± 11.7 &  0.41 & [8, 4]         &         12 &       10 \\
- \multirow{3}{*}{Linear2HiddenLayer} & 40.5 ± 14.4 &  0.52 & [15, 5]        &         20 &       10 \\
-                                     & 36.4 ± 13.0 &  0.56 & [8, 4]         &         12 &       10 \\
-                                     & 8.2 ± 16.7  &  0.8  & [15, 10, 3]    &         28 &       10 \\
- \multirow{3}{*}{RBFN}               & -0.3 ± 3.1  &  0.88 & [15, 5]        &         20 &       10 \\
-                                     & -1.8 ± 1.8  &  0.89 & [8, 4]         &         12 &       10 \\
-                                     & -5.5 ± 5.0  &  0.92 & [15, 10, 3]    &         28 &       10 \\
+ Relu1HiddenLayer             & 96.5 ± 0.8  &  0.03 & [8, 4]         &         12 &       20 \\
+ Relu2HiddenLayer             & 91.7 ± 2.2  &  0.07 & [15, 5]        &         20 &       20 \\
+ Tanh2HiddenLayer             & 91.2 ± 3.6  &  0.08 & [8, 4]         &         12 &       20 \\
+ Relu1HiddenLayer             & 89.2 ± 5.8  &  0.09 & [15, 10, 3]    &         28 &       20 \\
+ Relu2HiddenLayer             & 87.8 ± 5.9  &  0.11 & [8, 4]         &         12 &       20 \\
+ Relu1HiddenLayer             & 87.8 ± 4.6  &  0.11 & [15, 5]        &         20 &       20 \\
+ \hline
+\multirow{2}{*}{GRNN} & 86.8 ± 2.7  &  0.12 & [15, 5]        &         20 &       20 \\
+                              & 85.9 ± 4.1  &  0.12 & [8, 4]         &         12 &       20 \\
+ Relu2HiddenLayer             & 83.4 ± 4.6  &  0.15 & [15, 10, 3]    &         28 &       20 \\
+ Tanh1HiddenLayer             & 76.8 ± 7.5  &  0.2  & [8, 4]         &         12 &       20 \\
+ GRNN                         & 75.1 ± 20.0 &  0.22 & [15, 10, 3]    &         28 &       20 \\
+ Tanh1HiddenLayer             & 73.2 ± 18.9 &  0.23 & [15, 10, 3]    &         28 &       20 \\
+ FFNN                         & 71.8 ± 0.6  &  0.25 & [15, 5]        &         20 &       20 \\
+ Tanh1HiddenLayer             & 70.2 ± 1.4  &  0.26 & [15, 5]        &         20 &       20 \\
+ Tanh2HiddenLayer             & 65.2 ± 25.4 &  0.3  & [15, 5]        &         20 &       20 \\
+ FFNN                         & 60.0 ± 9.5  &  0.35 & [15, 10, 3]    &         28 &       20 \\
+ Linear1HiddenLayer           & 57.8 ± 6.2  &  0.37 & [15, 5]        &         20 &       20 \\
+ FFNN                         & 52.7 ± 13.5 &  0.41 & [8, 4]         &         12 &       20 \\
+ Tanh2HiddenLayer             & 52.2 ± 28.9 &  0.42 & [15, 10, 3]    &         28 &       20 \\
+ Linear2HiddenLayer           & 51.9 ± 7.5  &  0.42 & [15, 10, 3]    &         28 &       20 \\
+ Linear1HiddenLayer           & 50.5 ± 1.3  &  0.43 & [8, 4]         &         12 &       20 \\
+ Linear2HiddenLayer           & 48.4 ± 2.8  &  0.45 & [15, 5]        &         20 &       20 \\
+ Linear1HiddenLayer           & 41.0 ± 20.6 &  0.52 & [15, 10, 3]    &         28 &       20 \\
+ Linear2HiddenLayer           & 35.1 ± 14.2 &  0.57 & [8, 4]         &         12 &       20 \\
+ \hline
+\multirow{3}{*}{RBFN} & -0.2 ± 4.5  &  0.88 & [15, 5]        &         20 &       20 \\
+                              & -0.3 ± 4.6  &  0.88 & [15, 10, 3]    &         28 &       20 \\
+                              & -5.7 ± 2.5  &  0.92 & [8, 4]         &         12 &       20 \\
 \hline
 \end{tabular}
         \caption{Results of different models}
