--- a/NN/tables/results.tex
+++ b/NN/tables/results.tex
@@ -3,37 +3,57 @@
         \centering
         \begin{tabular}{llrlrr}
 \hline
- model                        & R2          &   MSE & hidden sizes   &   total hs &   epochs \\
+ model                                      & R2          &   MSE & hidden sizes   &   total hs &   epochs \\
 \hline
- Relu1HiddenLayer             & 96.5 ± 0.8  &  0.03 & [8, 4]         &         12 &       20 \\
- Relu2HiddenLayer             & 91.7 ± 2.2  &  0.07 & [15, 5]        &         20 &       20 \\
- Tanh2HiddenLayer             & 91.2 ± 3.6  &  0.08 & [8, 4]         &         12 &       20 \\
- Relu1HiddenLayer             & 89.2 ± 5.8  &  0.09 & [15, 10, 3]    &         28 &       20 \\
- Relu2HiddenLayer             & 87.8 ± 5.9  &  0.11 & [8, 4]         &         12 &       20 \\
- Relu1HiddenLayer             & 87.8 ± 4.6  &  0.11 & [15, 5]        &         20 &       20 \\
  \hline
-\multirow{2}{*}{GRNN} & 86.8 ± 2.7  &  0.12 & [15, 5]        &         20 &       20 \\
-                              & 85.9 ± 4.1  &  0.12 & [8, 4]         &         12 &       20 \\
- Relu2HiddenLayer             & 83.4 ± 4.6  &  0.15 & [15, 10, 3]    &         28 &       20 \\
- Tanh1HiddenLayer             & 76.8 ± 7.5  &  0.2  & [8, 4]         &         12 &       20 \\
- GRNN                         & 75.1 ± 20.0 &  0.22 & [15, 10, 3]    &         28 &       20 \\
- Tanh1HiddenLayer             & 73.2 ± 18.9 &  0.23 & [15, 10, 3]    &         28 &       20 \\
- FFNN                         & 71.8 ± 0.6  &  0.25 & [15, 5]        &         20 &       20 \\
- Tanh1HiddenLayer             & 70.2 ± 1.4  &  0.26 & [15, 5]        &         20 &       20 \\
- Tanh2HiddenLayer             & 65.2 ± 25.4 &  0.3  & [15, 5]        &         20 &       20 \\
- FFNN                         & 60.0 ± 9.5  &  0.35 & [15, 10, 3]    &         28 &       20 \\
- Linear1HiddenLayer           & 57.8 ± 6.2  &  0.37 & [15, 5]        &         20 &       20 \\
- FFNN                         & 52.7 ± 13.5 &  0.41 & [8, 4]         &         12 &       20 \\
- Tanh2HiddenLayer             & 52.2 ± 28.9 &  0.42 & [15, 10, 3]    &         28 &       20 \\
- Linear2HiddenLayer           & 51.9 ± 7.5  &  0.42 & [15, 10, 3]    &         28 &       20 \\
- Linear1HiddenLayer           & 50.5 ± 1.3  &  0.43 & [8, 4]         &         12 &       20 \\
- Linear2HiddenLayer           & 48.4 ± 2.8  &  0.45 & [15, 5]        &         20 &       20 \\
- Linear1HiddenLayer           & 41.0 ± 20.6 &  0.52 & [15, 10, 3]    &         28 &       20 \\
- Linear2HiddenLayer           & 35.1 ± 14.2 &  0.57 & [8, 4]         &         12 &       20 \\
+Tanh2HiddenLayer                    & 93.4 ± 4.1  &  0.06 & [8, 4]         &         12 &       30 \\
  \hline
-\multirow{3}{*}{RBFN} & -0.2 ± 4.5  &  0.88 & [15, 5]        &         20 &       20 \\
-                              & -0.3 ± 4.6  &  0.88 & [15, 10, 3]    &         28 &       20 \\
-                              & -5.7 ± 2.5  &  0.92 & [8, 4]         &         12 &       20 \\
+Relu1HiddenLayer                    & 92.1 ± 3.0  &  0.07 & [15, 5]        &         20 &       30 \\
+ \hline
+Tanh1HiddenLayer                    & 90.0 ± 6.4  &  0.09 & [8, 4]         &         12 &       30 \\
+ \hline
+Relu1HiddenLayer                    & 88.5 ± 6.7  &  0.1  & [8, 4]         &         12 &       30 \\
+ \hline
+GRNN                                & 87.7 ± 5.2  &  0.11 & [8, 4]         &         12 &       30 \\
+ \hline
+Relu2HiddenLayer                    & 86.5 ± 0.7  &  0.12 & [15, 5]        &         20 &       30 \\
+ \hline
+\multirow{2}{*}{GRNN}               & 86.5 ± 3.8  &  0.12 & [15, 5]        &         20 &       30 \\
+                                            & 85.7 ± 9.2  &  0.13 & [15, 10, 3]    &         28 &       30 \\
+ \hline
+Relu1HiddenLayer                    & 83.6 ± 7.4  &  0.14 & [15, 10, 3]    &         28 &       30 \\
+ \hline
+Relu2HiddenLayer                    & 82.6 ± 1.4  &  0.15 & [15, 10, 3]    &         28 &       30 \\
+ \hline
+Tanh2HiddenLayer                    & 80.2 ± 14.8 &  0.17 & [15, 5]        &         20 &       30 \\
+ \hline
+Tanh1HiddenLayer                    & 79.3 ± 0.8  &  0.18 & [15, 5]        &         20 &       30 \\
+ \hline
+Relu2HiddenLayer                    & 75.7 ± 17.8 &  0.21 & [8, 4]         &         12 &       30 \\
+ \hline
+FFNN                                & 71.5 ± 1.5  &  0.25 & [15, 5]        &         20 &       30 \\
+ \hline
+Tanh1HiddenLayer                    & 70.3 ± 20.0 &  0.26 & [15, 10, 3]    &         28 &       30 \\
+ \hline
+\multirow{2}{*}{FFNN}               & 65.3 ± 0.7  &  0.3  & [8, 4]         &         12 &       30 \\
+                                            & 57.9 ± 7.0  &  0.37 & [15, 10, 3]    &         28 &       30 \\
+ \hline
+Linear1HiddenLayer                  & 57.2 ± 8.9  &  0.37 & [15, 5]        &         20 &       30 \\
+ \hline
+\multirow{2}{*}{Linear2HiddenLayer} & 52.9 ± 1.6  &  0.41 & [15, 5]        &         20 &       30 \\
+                                            & 51.6 ± 0.5  &  0.42 & [8, 4]         &         12 &       30 \\
+ \hline
+Linear1HiddenLayer                  & 50.6 ± 6.4  &  0.43 & [8, 4]         &         12 &       30 \\
+ \hline
+Tanh2HiddenLayer                    & 49.2 ± 32.6 &  0.44 & [15, 10, 3]    &         28 &       30 \\
+ \hline
+Linear2HiddenLayer                  & 49.0 ± 4.2  &  0.45 & [15, 10, 3]    &         28 &       30 \\
+ \hline
+Linear1HiddenLayer                  & 39.0 ± 7.4  &  0.53 & [15, 10, 3]    &         28 &       30 \\
+ \hline
+\multirow{3}{*}{RBFN}               & 20.4 ± 0.7  &  0.7  & [15, 5]        &         20 &       30 \\
+                                            & 10.2 ± 1.5  &  0.79 & [8, 4]         &         12 &       30 \\
+                                            & 5.0 ± 0.7   &  0.83 & [15, 10, 3]    &         28 &       30 \\
 \hline
 \end{tabular}
         \caption{Results of different models}
