--- a/NN/plots_preds_latex.tex
+++ b/NN/plots_preds_latex.tex
@@ -4,3 +4,9 @@
     \includegraphics[width=0.8\textwidth]{plots/R2-99.14-Relu2HiddenLayer-HTCflow_rate1-using-conc_nano1-using-Kfluid1-using-heat_flux1-using-X_D1-using-flow_rate2-using-conc_nano2-using-Kfluid2-using-heat_flux2-using-X_D2.png}
     \caption{Prediction of HTC using flow_rate1 conc_nano1 Kfluid1 heat_flux1 X_D1 flow_rate2 conc_nano2 Kfluid2 heat_flux2 X_D2 with Relu2HiddenLayer - R-Squared: 0.94}
 \end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{plots_preds/R2-99.14-Relu2HiddenLayer-HTC.png}
+    \caption{Prediction of HTC with Relu2HiddenLayer - R-Squared: 0.94}
+\end{figure}
