--- a/NN/tables/results.tex
+++ b/NN/tables/results.tex
@@ -3,21 +3,169 @@
         \centering
         \begin{tabular}{llrlrr}
 \hline
- model                                     & R2         &   MSE & hidden sizes   &   total hs &   epochs \\
+ model   & R2         &   MSE & hidden sizes   &   total hs &   epochs \\
 \hline
  \hline
-\multirow{12}{*}{Tanh1HiddenLayer} & 97.1 ± 0.0 &  0.03 & [8, 4]         &         12 &       20 \\
-                                           & 92.7 ± 0.0 &  0.06 & [15, 10, 3]    &         28 &      100 \\
-                                           & 92.7 ± 0.0 &  0.06 & [15, 5]        &         20 &      100 \\
-                                           & 92.6 ± 0.0 &  0.06 & [15, 10, 3]    &         28 &      200 \\
-                                           & 92.6 ± 0.0 &  0.06 & [15, 5]        &         20 &      200 \\
-                                           & 92.4 ± 0.0 &  0.07 & [15, 10, 3]    &         28 &       50 \\
-                                           & 92.4 ± 0.0 &  0.07 & [15, 5]        &         20 &       50 \\
-                                           & 91.7 ± 0.0 &  0.07 & [8, 4]         &         12 &       50 \\
-                                           & 80.9 ± 0.0 &  0.17 & [15, 10, 3]    &         28 &       20 \\
-                                           & 80.9 ± 0.0 &  0.17 & [15, 5]        &         20 &       20 \\
-                                           & 80.3 ± 0.0 &  0.17 & [8, 4]         &         12 &      100 \\
-                                           & 78.6 ± 0.0 &  0.19 & [8, 4]         &         12 &      200 \\
+Tanh1HiddenLayer         & 97.1 ± 0.0 &  0.03 & [8, 4]         &         12 &       20 \\
+ \hline
+\multirow{3}{*}{Relu2HiddenLayer}         & 95.7 ± 0.0 &  0.04 & [15, 10, 3]    &         28 &      200 \\
+         & 95.3 ± 0.0 &  0.04 & [15, 10, 3]    &         28 &       50 \\
+         & 95.0 ± 0.0 &  0.04 & [15, 10, 3]    &         28 &      100 \\
+ \hline
+\multirow{3}{*}{GRNN}         & 94.3 ± 0.0 &  0.05 & [15, 5]        &         20 &       20 \\
+         & 94.3 ± 0.0 &  0.05 & [15, 10, 3]    &         28 &       20 \\
+         & 94.3 ± 0.0 &  0.05 & [8, 4]         &         12 &       20 \\
+ \hline
+\multirow{5}{*}{Tanh1HiddenLayer}         & 92.7 ± 0.0 &  0.06 & [15, 10, 3]    &         28 &      100 \\
+         & 92.7 ± 0.0 &  0.06 & [15, 5]        &         20 &      100 \\
+         & 92.6 ± 0.0 &  0.06 & [15, 5]        &         20 &      200 \\
+         & 92.6 ± 0.0 &  0.06 & [15, 10, 3]    &         28 &      200 \\
+         & 92.4 ± 0.0 &  0.07 & [15, 5]        &         20 &       50 \\
+ \hline
+Relu1HiddenLayer         & 92.4 ± 0.0 &  0.07 & [8, 4]         &         12 &       20 \\
+ \hline
+Tanh1HiddenLayer         & 92.4 ± 0.0 &  0.07 & [15, 10, 3]    &         28 &       50 \\
+ \hline
+\multirow{3}{*}{GRNN}         & 92.1 ± 0.0 &  0.07 & [15, 10, 3]    &         28 &       50 \\
+         & 92.1 ± 0.0 &  0.07 & [8, 4]         &         12 &       50 \\
+         & 92.1 ± 0.0 &  0.07 & [15, 5]        &         20 &       50 \\
+ \hline
+Tanh1HiddenLayer         & 91.7 ± 0.0 &  0.07 & [8, 4]         &         12 &       50 \\
+ \hline
+\multirow{2}{*}{Relu1HiddenLayer}         & 91.1 ± 0.0 &  0.08 & [15, 5]        &         20 &       50 \\
+         & 91.1 ± 0.0 &  0.08 & [15, 10, 3]    &         28 &       50 \\
+ \hline
+Relu2HiddenLayer         & 90.6 ± 0.0 &  0.08 & [15, 5]        &         20 &      200 \\
+ \hline
+\multirow{2}{*}{Relu1HiddenLayer}         & 90.4 ± 0.0 &  0.08 & [8, 4]         &         12 &      200 \\
+         & 90.1 ± 0.0 &  0.09 & [8, 4]         &         12 &      100 \\
+ \hline
+\multirow{2}{*}{Relu2HiddenLayer}         & 90.0 ± 0.0 &  0.09 & [15, 5]        &         20 &      100 \\
+         & 89.5 ± 0.0 &  0.09 & [15, 10, 3]    &         28 &       20 \\
+ \hline
+Tanh2HiddenLayer         & 88.8 ± 0.0 &  0.1  & [8, 4]         &         12 &      100 \\
+ \hline
+Relu1HiddenLayer         & 88.8 ± 0.0 &  0.1  & [8, 4]         &         12 &       50 \\
+ \hline
+Relu2HiddenLayer         & 88.8 ± 0.0 &  0.1  & [15, 5]        &         20 &       50 \\
+ \hline
+Tanh2HiddenLayer         & 87.0 ± 0.0 &  0.11 & [8, 4]         &         12 &      200 \\
+ \hline
+\multirow{2}{*}{Relu1HiddenLayer}         & 86.7 ± 0.0 &  0.12 & [15, 10, 3]    &         28 &       20 \\
+         & 86.7 ± 0.0 &  0.12 & [15, 5]        &         20 &       20 \\
+ \hline
+Tanh2HiddenLayer         & 86.6 ± 0.0 &  0.12 & [15, 5]        &         20 &       20 \\
+ \hline
+\multirow{2}{*}{Relu1HiddenLayer}         & 85.5 ± 0.0 &  0.13 & [15, 5]        &         20 &      100 \\
+         & 85.5 ± 0.0 &  0.13 & [15, 10, 3]    &         28 &      100 \\
+ \hline
+\multirow{3}{*}{Tanh2HiddenLayer}         & 84.7 ± 0.0 &  0.13 & [15, 10, 3]    &         28 &      200 \\
+         & 84.3 ± 0.0 &  0.14 & [8, 4]         &         12 &       50 \\
+         & 84.0 ± 0.0 &  0.14 & [15, 10, 3]    &         28 &      100 \\
+ \hline
+\multirow{2}{*}{Relu1HiddenLayer}         & 83.6 ± 0.0 &  0.14 & [15, 5]        &         20 &      200 \\
+         & 83.6 ± 0.0 &  0.14 & [15, 10, 3]    &         28 &      200 \\
+ \hline
+Tanh2HiddenLayer         & 82.6 ± 0.0 &  0.15 & [15, 10, 3]    &         28 &       50 \\
+ \hline
+\multirow{3}{*}{Tanh1HiddenLayer}         & 80.9 ± 0.0 &  0.17 & [15, 5]        &         20 &       20 \\
+         & 80.9 ± 0.0 &  0.17 & [15, 10, 3]    &         28 &       20 \\
+         & 80.3 ± 0.0 &  0.17 & [8, 4]         &         12 &      100 \\
+ \hline
+\multirow{3}{*}{FFNN}         & 79.2 ± 0.0 &  0.18 & [15, 5]        &         20 &       50 \\
+         & 79.1 ± 0.0 &  0.18 & [15, 5]        &         20 &      100 \\
+         & 79.0 ± 0.0 &  0.18 & [15, 5]        &         20 &      200 \\
+ \hline
+Tanh2HiddenLayer         & 78.9 ± 0.0 &  0.18 & [15, 10, 3]    &         28 &       20 \\
+ \hline
+Tanh1HiddenLayer         & 78.6 ± 0.0 &  0.19 & [8, 4]         &         12 &      200 \\
+ \hline
+FFNN         & 78.6 ± 0.0 &  0.19 & [8, 4]         &         12 &       50 \\
+ \hline
+Relu2HiddenLayer         & 78.2 ± 0.0 &  0.19 & [15, 5]        &         20 &       20 \\
+ \hline
+\multirow{3}{*}{FFNN}         & 77.9 ± 0.0 &  0.19 & [8, 4]         &         12 &      100 \\
+         & 77.9 ± 0.0 &  0.19 & [8, 4]         &         12 &      200 \\
+         & 76.3 ± 0.0 &  0.21 & [8, 4]         &         12 &       20 \\
+ \hline
+\multirow{2}{*}{Tanh2HiddenLayer}         & 75.0 ± 0.0 &  0.22 & [15, 5]        &         20 &      200 \\
+         & 74.7 ± 0.0 &  0.22 & [15, 5]        &         20 &      100 \\
+ \hline
+\multirow{3}{*}{GRNN}         & 72.1 ± 0.0 &  0.24 & [15, 10, 3]    &         28 &      100 \\
+         & 72.1 ± 0.0 &  0.24 & [8, 4]         &         12 &      100 \\
+         & 72.1 ± 0.0 &  0.24 & [15, 5]        &         20 &      100 \\
+ \hline
+FFNN         & 71.6 ± 0.0 &  0.25 & [15, 5]        &         20 &       20 \\
+ \hline
+Tanh2HiddenLayer         & 70.3 ± 0.0 &  0.26 & [8, 4]         &         12 &       20 \\
+ \hline
+\multirow{3}{*}{GRNN}         & 69.1 ± 0.0 &  0.27 & [15, 10, 3]    &         28 &      200 \\
+         & 69.1 ± 0.0 &  0.27 & [8, 4]         &         12 &      200 \\
+         & 69.1 ± 0.0 &  0.27 & [15, 5]        &         20 &      200 \\
+ \hline
+\multirow{2}{*}{Linear2HiddenLayer}         & 62.8 ± 0.0 &  0.33 & [15, 10, 3]    &         28 &       20 \\
+         & 62.7 ± 0.0 &  0.33 & [8, 4]         &         12 &       20 \\
+ \hline
+\multirow{2}{*}{RBFN}         & 61.6 ± 0.0 &  0.34 & [15, 5]        &         20 &      100 \\
+         & 61.6 ± 0.0 &  0.34 & [15, 10, 3]    &         28 &      100 \\
+ \hline
+\multirow{2}{*}{Linear1HiddenLayer}         & 60.9 ± 0.0 &  0.34 & [15, 10, 3]    &         28 &       20 \\
+         & 60.9 ± 0.0 &  0.34 & [15, 5]        &         20 &       20 \\
+ \hline
+Tanh2HiddenLayer         & 60.4 ± 0.0 &  0.35 & [15, 5]        &         20 &       50 \\
+ \hline
+\multirow{4}{*}{RBFN}         & 59.6 ± 0.0 &  0.35 & [15, 5]        &         20 &      200 \\
+         & 59.6 ± 0.0 &  0.35 & [15, 10, 3]    &         28 &      200 \\
+         & 55.7 ± 0.0 &  0.39 & [15, 5]        &         20 &       50 \\
+         & 55.7 ± 0.0 &  0.39 & [15, 10, 3]    &         28 &       50 \\
+ \hline
+\multirow{7}{*}{Linear2HiddenLayer}         & 55.5 ± 0.0 &  0.39 & [15, 5]        &         20 &       50 \\
+         & 55.1 ± 0.0 &  0.39 & [15, 5]        &         20 &      100 \\
+         & 55.1 ± 0.0 &  0.39 & [8, 4]         &         12 &      100 \\
+         & 55.1 ± 0.0 &  0.39 & [8, 4]         &         12 &      200 \\
+         & 55.0 ± 0.0 &  0.39 & [15, 5]        &         20 &      200 \\
+         & 54.3 ± 0.0 &  0.4  & [8, 4]         &         12 &       50 \\
+         & 54.2 ± 0.0 &  0.4  & [15, 10, 3]    &         28 &      200 \\
+ \hline
+\multirow{6}{*}{Linear1HiddenLayer}         & 53.1 ± 0.0 &  0.41 & [15, 10, 3]    &         28 &      100 \\
+         & 53.1 ± 0.0 &  0.41 & [15, 5]        &         20 &      100 \\
+         & 52.9 ± 0.0 &  0.41 & [15, 10, 3]    &         28 &      200 \\
+         & 52.9 ± 0.0 &  0.41 & [15, 5]        &         20 &      200 \\
+         & 52.9 ± 0.0 &  0.41 & [8, 4]         &         12 &      100 \\
+         & 52.8 ± 0.0 &  0.41 & [8, 4]         &         12 &      200 \\
+ \hline
+Linear2HiddenLayer         & 52.6 ± 0.0 &  0.41 & [15, 10, 3]    &         28 &       50 \\
+ \hline
+Linear1HiddenLayer         & 50.9 ± 0.0 &  0.43 & [8, 4]         &         12 &       50 \\
+ \hline
+Linear2HiddenLayer         & 50.4 ± 0.0 &  0.43 & [15, 10, 3]    &         28 &      100 \\
+ \hline
+\multirow{2}{*}{Linear1HiddenLayer}         & 48.6 ± 0.0 &  0.45 & [15, 5]        &         20 &       50 \\
+         & 48.6 ± 0.0 &  0.45 & [15, 10, 3]    &         28 &       50 \\
+ \hline
+Linear2HiddenLayer         & 44.6 ± 0.0 &  0.48 & [15, 5]        &         20 &       20 \\
+ \hline
+RBFN         & 43.5 ± 0.0 &  0.49 & [8, 4]         &         12 &       50 \\
+ \hline
+Linear1HiddenLayer         & 41.2 ± 0.0 &  0.51 & [8, 4]         &         12 &       20 \\
+ \hline
+Relu2HiddenLayer         & 31.6 ± 0.0 &  0.6  & [8, 4]         &         12 &       20 \\
+ \hline
+\multirow{2}{*}{RBFN}         & 22.0 ± 0.0 &  0.68 & [8, 4]         &         12 &      100 \\
+         & 19.8 ± 0.0 &  0.7  & [8, 4]         &         12 &      200 \\
+ \hline
+\multirow{3}{*}{Relu2HiddenLayer}         & 13.4 ± 0.0 &  0.76 & [8, 4]         &         12 &      200 \\
+         & 8.7 ± 0.0  &  0.8  & [8, 4]         &         12 &      100 \\
+         & 5.4 ± 0.0  &  0.83 & [8, 4]         &         12 &       50 \\
+ \hline
+\multirow{4}{*}{FFNN}         & 0.0 ± 0.0  &  0.88 & [15, 10, 3]    &         28 &      200 \\
+         & 0.0 ± 0.0  &  0.88 & [15, 10, 3]    &         28 &      100 \\
+         & 0.0 ± 0.0  &  0.88 & [15, 10, 3]    &         28 &       50 \\
+         & 0.0 ± 0.0  &  0.88 & [15, 10, 3]    &         28 &       20 \\
+ \hline
+\multirow{3}{*}{RBFN}         & -0.5 ± 0.0 &  0.88 & [8, 4]         &         12 &       20 \\
+         & -1.8 ± 0.0 &  0.89 & [15, 5]        &         20 &       20 \\
+         & -1.8 ± 0.0 &  0.89 & [15, 10, 3]    &         28 &       20 \\
 \hline
 \end{tabular}
         \caption{Results of different models}
