--- a/NN/tables/results.tex
+++ b/NN/tables/results.tex
@@ -3,169 +3,169 @@
         \centering
         \begin{tabular}{llrlrr}
 \hline
- model   & R2         &   MSE & hidden sizes   &   total hs &   epochs \\
+ model                                      & R2          &   MSE & hidden sizes   &   total hs &   epochs \\
 \hline
  \hline
-Tanh1HiddenLayer         & 97.1 ± 0.0 &  0.03 & [8, 4]         &         12 &       20 \\
+\multirow{3}{*}{GRNN}               & 88.5 ± 9.8  &  0.1  & [15, 5]        &         20 &       50 \\
+                                            & 88.5 ± 9.8  &  0.1  & [8, 4]         &         12 &       50 \\
+                                            & 88.5 ± 9.8  &  0.1  & [15, 10, 3]    &         28 &       50 \\
  \hline
-\multirow{3}{*}{Relu2HiddenLayer}         & 95.7 ± 0.0 &  0.04 & [15, 10, 3]    &         28 &      200 \\
-         & 95.3 ± 0.0 &  0.04 & [15, 10, 3]    &         28 &       50 \\
-         & 95.0 ± 0.0 &  0.04 & [15, 10, 3]    &         28 &      100 \\
+Relu2HiddenLayer                    & 87.0 ± 9.6  &  0.11 & [15, 10, 3]    &         28 &      200 \\
  \hline
-\multirow{3}{*}{GRNN}         & 94.3 ± 0.0 &  0.05 & [15, 5]        &         20 &       20 \\
-         & 94.3 ± 0.0 &  0.05 & [15, 10, 3]    &         28 &       20 \\
-         & 94.3 ± 0.0 &  0.05 & [8, 4]         &         12 &       20 \\
+Tanh1HiddenLayer                    & 86.3 ± 4.9  &  0.12 & [8, 4]         &         12 &       50 \\
  \hline
-\multirow{5}{*}{Tanh1HiddenLayer}         & 92.7 ± 0.0 &  0.06 & [15, 10, 3]    &         28 &      100 \\
-         & 92.7 ± 0.0 &  0.06 & [15, 5]        &         20 &      100 \\
-         & 92.6 ± 0.0 &  0.06 & [15, 5]        &         20 &      200 \\
-         & 92.6 ± 0.0 &  0.06 & [15, 10, 3]    &         28 &      200 \\
-         & 92.4 ± 0.0 &  0.07 & [15, 5]        &         20 &       50 \\
+\multirow{2}{*}{Relu2HiddenLayer}   & 85.6 ± 7.6  &  0.13 & [15, 10, 3]    &         28 &       50 \\
+                                            & 84.7 ± 12.4 &  0.13 & [15, 10, 3]    &         28 &      100 \\
  \hline
-Relu1HiddenLayer         & 92.4 ± 0.0 &  0.07 & [8, 4]         &         12 &       20 \\
+Tanh1HiddenLayer                    & 83.9 ± 8.9  &  0.14 & [8, 4]         &         12 &       20 \\
  \hline
-Tanh1HiddenLayer         & 92.4 ± 0.0 &  0.07 & [15, 10, 3]    &         28 &       50 \\
+Relu2HiddenLayer                    & 83.0 ± 13.6 &  0.15 & [15, 5]        &         20 &      200 \\
  \hline
-\multirow{3}{*}{GRNN}         & 92.1 ± 0.0 &  0.07 & [15, 10, 3]    &         28 &       50 \\
-         & 92.1 ± 0.0 &  0.07 & [8, 4]         &         12 &       50 \\
-         & 92.1 ± 0.0 &  0.07 & [15, 5]        &         20 &       50 \\
+\multirow{3}{*}{GRNN}               & 81.9 ± 13.3 &  0.16 & [15, 5]        &         20 &      100 \\
+                                            & 81.9 ± 13.3 &  0.16 & [8, 4]         &         12 &      100 \\
+                                            & 81.9 ± 13.3 &  0.16 & [15, 10, 3]    &         28 &      100 \\
  \hline
-Tanh1HiddenLayer         & 91.7 ± 0.0 &  0.07 & [8, 4]         &         12 &       50 \\
+\multirow{2}{*}{Relu2HiddenLayer}   & 81.7 ± 12.7 &  0.16 & [15, 5]        &         20 &      100 \\
+                                            & 81.6 ± 17.4 &  0.16 & [15, 5]        &         20 &       50 \\
  \hline
-\multirow{2}{*}{Relu1HiddenLayer}         & 91.1 ± 0.0 &  0.08 & [15, 5]        &         20 &       50 \\
-         & 91.1 ± 0.0 &  0.08 & [15, 10, 3]    &         28 &       50 \\
+\multirow{3}{*}{GRNN}               & 81.1 ± 8.2  &  0.17 & [15, 10, 3]    &         28 &       20 \\
+                                            & 81.1 ± 8.2  &  0.17 & [8, 4]         &         12 &       20 \\
+                                            & 81.1 ± 8.2  &  0.17 & [15, 5]        &         20 &       20 \\
  \hline
-Relu2HiddenLayer         & 90.6 ± 0.0 &  0.08 & [15, 5]        &         20 &      200 \\
+\multirow{4}{*}{Relu1HiddenLayer}   & 81.0 ± 8.5  &  0.17 & [15, 5]        &         20 &      100 \\
+                                            & 81.0 ± 8.5  &  0.17 & [15, 10, 3]    &         28 &      100 \\
+                                            & 80.7 ± 9.2  &  0.17 & [15, 5]        &         20 &      200 \\
+                                            & 80.7 ± 9.2  &  0.17 & [15, 10, 3]    &         28 &      200 \\
  \hline
-\multirow{2}{*}{Relu1HiddenLayer}         & 90.4 ± 0.0 &  0.08 & [8, 4]         &         12 &      200 \\
-         & 90.1 ± 0.0 &  0.09 & [8, 4]         &         12 &      100 \\
+Relu2HiddenLayer                    & 80.2 ± 19.6 &  0.17 & [15, 10, 3]    &         28 &       20 \\
  \hline
-\multirow{2}{*}{Relu2HiddenLayer}         & 90.0 ± 0.0 &  0.09 & [15, 5]        &         20 &      100 \\
-         & 89.5 ± 0.0 &  0.09 & [15, 10, 3]    &         28 &       20 \\
+\multirow{2}{*}{GRNN}               & 79.9 ± 13.7 &  0.18 & [15, 10, 3]    &         28 &      200 \\
+                                            & 79.9 ± 13.7 &  0.18 & [8, 4]         &         12 &      200 \\
  \hline
-Tanh2HiddenLayer         & 88.8 ± 0.0 &  0.1  & [8, 4]         &         12 &      100 \\
+Tanh1HiddenLayer                    & 79.9 ± 14.3 &  0.18 & [8, 4]         &         12 &      100 \\
  \hline
-Relu1HiddenLayer         & 88.8 ± 0.0 &  0.1  & [8, 4]         &         12 &       50 \\
+GRNN                                & 79.9 ± 13.7 &  0.18 & [15, 5]        &         20 &      200 \\
  \hline
-Relu2HiddenLayer         & 88.8 ± 0.0 &  0.1  & [15, 5]        &         20 &       50 \\
+Tanh1HiddenLayer                    & 79.7 ± 13.7 &  0.18 & [8, 4]         &         12 &      200 \\
  \hline
-Tanh2HiddenLayer         & 87.0 ± 0.0 &  0.11 & [8, 4]         &         12 &      200 \\
+\multirow{2}{*}{Relu1HiddenLayer}   & 79.1 ± 9.9  &  0.18 & [15, 10, 3]    &         28 &       50 \\
+                                            & 79.1 ± 9.9  &  0.18 & [15, 5]        &         20 &       50 \\
  \hline
-\multirow{2}{*}{Relu1HiddenLayer}         & 86.7 ± 0.0 &  0.12 & [15, 10, 3]    &         28 &       20 \\
-         & 86.7 ± 0.0 &  0.12 & [15, 5]        &         20 &       20 \\
+Relu2HiddenLayer                    & 79.0 ± 10.0 &  0.18 & [15, 5]        &         20 &       20 \\
  \hline
-Tanh2HiddenLayer         & 86.6 ± 0.0 &  0.12 & [15, 5]        &         20 &       20 \\
+\multirow{2}{*}{Tanh1HiddenLayer}   & 77.8 ± 11.9 &  0.19 & [15, 5]        &         20 &       20 \\
+                                            & 77.8 ± 11.9 &  0.19 & [15, 10, 3]    &         28 &       20 \\
  \hline
-\multirow{2}{*}{Relu1HiddenLayer}         & 85.5 ± 0.0 &  0.13 & [15, 5]        &         20 &      100 \\
-         & 85.5 ± 0.0 &  0.13 & [15, 10, 3]    &         28 &      100 \\
+Relu1HiddenLayer                    & 77.7 ± 12.3 &  0.2  & [8, 4]         &         12 &       20 \\
  \hline
-\multirow{3}{*}{Tanh2HiddenLayer}         & 84.7 ± 0.0 &  0.13 & [15, 10, 3]    &         28 &      200 \\
-         & 84.3 ± 0.0 &  0.14 & [8, 4]         &         12 &       50 \\
-         & 84.0 ± 0.0 &  0.14 & [15, 10, 3]    &         28 &      100 \\
+\multirow{6}{*}{Tanh1HiddenLayer}   & 77.3 ± 25.3 &  0.2  & [15, 5]        &         20 &       50 \\
+                                            & 77.3 ± 25.3 &  0.2  & [15, 10, 3]    &         28 &       50 \\
+                                            & 76.4 ± 30.3 &  0.21 & [15, 10, 3]    &         28 &      200 \\
+                                            & 76.4 ± 30.3 &  0.21 & [15, 5]        &         20 &      200 \\
+                                            & 76.1 ± 31.0 &  0.21 & [15, 10, 3]    &         28 &      100 \\
+                                            & 76.1 ± 31.0 &  0.21 & [15, 5]        &         20 &      100 \\
  \hline
-\multirow{2}{*}{Relu1HiddenLayer}         & 83.6 ± 0.0 &  0.14 & [15, 5]        &         20 &      200 \\
-         & 83.6 ± 0.0 &  0.14 & [15, 10, 3]    &         28 &      200 \\
+Relu1HiddenLayer                    & 74.3 ± 19.4 &  0.22 & [8, 4]         &         12 &       50 \\
  \hline
-Tanh2HiddenLayer         & 82.6 ± 0.0 &  0.15 & [15, 10, 3]    &         28 &       50 \\
+Relu2HiddenLayer                    & 72.5 ± 22.9 &  0.24 & [8, 4]         &         12 &       20 \\
  \hline
-\multirow{3}{*}{Tanh1HiddenLayer}         & 80.9 ± 0.0 &  0.17 & [15, 5]        &         20 &       20 \\
-         & 80.9 ± 0.0 &  0.17 & [15, 10, 3]    &         28 &       20 \\
-         & 80.3 ± 0.0 &  0.17 & [8, 4]         &         12 &      100 \\
+\multirow{2}{*}{Relu1HiddenLayer}   & 69.9 ± 14.6 &  0.26 & [15, 10, 3]    &         28 &       20 \\
+                                            & 69.9 ± 14.6 &  0.26 & [15, 5]        &         20 &       20 \\
  \hline
-\multirow{3}{*}{FFNN}         & 79.2 ± 0.0 &  0.18 & [15, 5]        &         20 &       50 \\
-         & 79.1 ± 0.0 &  0.18 & [15, 5]        &         20 &      100 \\
-         & 79.0 ± 0.0 &  0.18 & [15, 5]        &         20 &      200 \\
+Relu2HiddenLayer                    & 67.7 ± 27.6 &  0.28 & [8, 4]         &         12 &      200 \\
  \hline
-Tanh2HiddenLayer         & 78.9 ± 0.0 &  0.18 & [15, 10, 3]    &         28 &       20 \\
+\multirow{3}{*}{Tanh2HiddenLayer}   & 67.2 ± 28.7 &  0.29 & [15, 10, 3]    &         28 &      200 \\
+                                            & 67.1 ± 28.6 &  0.29 & [15, 10, 3]    &         28 &      100 \\
+                                            & 66.2 ± 28.2 &  0.3  & [15, 10, 3]    &         28 &       50 \\
  \hline
-Tanh1HiddenLayer         & 78.6 ± 0.0 &  0.19 & [8, 4]         &         12 &      200 \\
+\multirow{2}{*}{Relu1HiddenLayer}   & 65.9 ± 43.4 &  0.3  & [8, 4]         &         12 &      200 \\
+                                            & 65.0 ± 41.3 &  0.31 & [8, 4]         &         12 &      100 \\
  \hline
-FFNN         & 78.6 ± 0.0 &  0.19 & [8, 4]         &         12 &       50 \\
+Relu2HiddenLayer                    & 64.7 ± 29.1 &  0.31 & [8, 4]         &         12 &      100 \\
  \hline
-Relu2HiddenLayer         & 78.2 ± 0.0 &  0.19 & [15, 5]        &         20 &       20 \\
+Tanh2HiddenLayer                    & 63.3 ± 42.0 &  0.32 & [8, 4]         &         12 &       50 \\
  \hline
-\multirow{3}{*}{FFNN}         & 77.9 ± 0.0 &  0.19 & [8, 4]         &         12 &      100 \\
-         & 77.9 ± 0.0 &  0.19 & [8, 4]         &         12 &      200 \\
-         & 76.3 ± 0.0 &  0.21 & [8, 4]         &         12 &       20 \\
+Relu2HiddenLayer                    & 62.9 ± 29.7 &  0.32 & [8, 4]         &         12 &       50 \\
  \hline
-\multirow{2}{*}{Tanh2HiddenLayer}         & 75.0 ± 0.0 &  0.22 & [15, 5]        &         20 &      200 \\
-         & 74.7 ± 0.0 &  0.22 & [15, 5]        &         20 &      100 \\
+Tanh2HiddenLayer                    & 62.6 ± 31.7 &  0.33 & [15, 10, 3]    &         28 &       20 \\
  \hline
-\multirow{3}{*}{GRNN}         & 72.1 ± 0.0 &  0.24 & [15, 10, 3]    &         28 &      100 \\
-         & 72.1 ± 0.0 &  0.24 & [8, 4]         &         12 &      100 \\
-         & 72.1 ± 0.0 &  0.24 & [15, 5]        &         20 &      100 \\
+Linear2HiddenLayer                  & 57.6 ± 4.0  &  0.37 & [8, 4]         &         12 &       20 \\
  \hline
-FFNN         & 71.6 ± 0.0 &  0.25 & [15, 5]        &         20 &       20 \\
+\multirow{2}{*}{Tanh2HiddenLayer}   & 56.2 ± 51.3 &  0.38 & [8, 4]         &         12 &      200 \\
+                                            & 56.0 ± 40.4 &  0.38 & [8, 4]         &         12 &       20 \\
  \hline
-Tanh2HiddenLayer         & 70.3 ± 0.0 &  0.26 & [8, 4]         &         12 &       20 \\
+\multirow{3}{*}{FFNN}               & 55.7 ± 29.0 &  0.39 & [15, 5]        &         20 &      200 \\
+                                            & 55.5 ± 28.9 &  0.39 & [15, 5]        &         20 &      100 \\
+                                            & 55.3 ± 28.8 &  0.39 & [15, 5]        &         20 &       50 \\
  \hline
-\multirow{3}{*}{GRNN}         & 69.1 ± 0.0 &  0.27 & [15, 10, 3]    &         28 &      200 \\
-         & 69.1 ± 0.0 &  0.27 & [8, 4]         &         12 &      200 \\
-         & 69.1 ± 0.0 &  0.27 & [15, 5]        &         20 &      200 \\
+\multirow{2}{*}{Linear2HiddenLayer} & 54.9 ± 0.1  &  0.39 & [8, 4]         &         12 &      200 \\
+                                            & 54.8 ± 1.2  &  0.4  & [15, 5]        &         20 &       50 \\
  \hline
-\multirow{2}{*}{Linear2HiddenLayer}         & 62.8 ± 0.0 &  0.33 & [15, 10, 3]    &         28 &       20 \\
-         & 62.7 ± 0.0 &  0.33 & [8, 4]         &         12 &       20 \\
+Linear1HiddenLayer                  & 54.8 ± 2.4  &  0.4  & [8, 4]         &         12 &       50 \\
  \hline
-\multirow{2}{*}{RBFN}         & 61.6 ± 0.0 &  0.34 & [15, 5]        &         20 &      100 \\
-         & 61.6 ± 0.0 &  0.34 & [15, 10, 3]    &         28 &      100 \\
+\multirow{6}{*}{Linear2HiddenLayer} & 54.8 ± 0.2  &  0.4  & [8, 4]         &         12 &      100 \\
+                                            & 54.4 ± 0.9  &  0.4  & [15, 5]        &         20 &      100 \\
+                                            & 54.3 ± 1.3  &  0.4  & [8, 4]         &         12 &       50 \\
+                                            & 54.2 ± 0.6  &  0.4  & [15, 10, 3]    &         28 &      100 \\
+                                            & 54.2 ± 0.5  &  0.4  & [15, 10, 3]    &         28 &      200 \\
+                                            & 53.9 ± 1.3  &  0.4  & [15, 5]        &         20 &      200 \\
  \hline
-\multirow{2}{*}{Linear1HiddenLayer}         & 60.9 ± 0.0 &  0.34 & [15, 10, 3]    &         28 &       20 \\
-         & 60.9 ± 0.0 &  0.34 & [15, 5]        &         20 &       20 \\
+Tanh2HiddenLayer                    & 53.8 ± 51.8 &  0.4  & [8, 4]         &         12 &      100 \\
  \hline
-Tanh2HiddenLayer         & 60.4 ± 0.0 &  0.35 & [15, 5]        &         20 &       50 \\
+\multirow{2}{*}{Linear1HiddenLayer} & 53.6 ± 0.8  &  0.41 & [8, 4]         &         12 &      200 \\
+                                            & 53.6 ± 0.8  &  0.41 & [8, 4]         &         12 &      100 \\
  \hline
-\multirow{4}{*}{RBFN}         & 59.6 ± 0.0 &  0.35 & [15, 5]        &         20 &      200 \\
-         & 59.6 ± 0.0 &  0.35 & [15, 10, 3]    &         28 &      200 \\
-         & 55.7 ± 0.0 &  0.39 & [15, 5]        &         20 &       50 \\
-         & 55.7 ± 0.0 &  0.39 & [15, 10, 3]    &         28 &       50 \\
+\multirow{3}{*}{Linear2HiddenLayer} & 53.2 ± 7.3  &  0.41 & [15, 10, 3]    &         28 &       20 \\
+                                            & 53.1 ± 0.7  &  0.41 & [15, 10, 3]    &         28 &       50 \\
+                                            & 52.1 ± 5.2  &  0.42 & [15, 5]        &         20 &       20 \\
  \hline
-\multirow{7}{*}{Linear2HiddenLayer}         & 55.5 ± 0.0 &  0.39 & [15, 5]        &         20 &       50 \\
-         & 55.1 ± 0.0 &  0.39 & [15, 5]        &         20 &      100 \\
-         & 55.1 ± 0.0 &  0.39 & [8, 4]         &         12 &      100 \\
-         & 55.1 ± 0.0 &  0.39 & [8, 4]         &         12 &      200 \\
-         & 55.0 ± 0.0 &  0.39 & [15, 5]        &         20 &      200 \\
-         & 54.3 ± 0.0 &  0.4  & [8, 4]         &         12 &       50 \\
-         & 54.2 ± 0.0 &  0.4  & [15, 10, 3]    &         28 &      200 \\
+FFNN                                & 51.5 ± 27.4 &  0.42 & [15, 5]        &         20 &       20 \\
  \hline
-\multirow{6}{*}{Linear1HiddenLayer}         & 53.1 ± 0.0 &  0.41 & [15, 10, 3]    &         28 &      100 \\
-         & 53.1 ± 0.0 &  0.41 & [15, 5]        &         20 &      100 \\
-         & 52.9 ± 0.0 &  0.41 & [15, 10, 3]    &         28 &      200 \\
-         & 52.9 ± 0.0 &  0.41 & [15, 5]        &         20 &      200 \\
-         & 52.9 ± 0.0 &  0.41 & [8, 4]         &         12 &      100 \\
-         & 52.8 ± 0.0 &  0.41 & [8, 4]         &         12 &      200 \\
+Tanh2HiddenLayer                    & 51.0 ± 29.8 &  0.43 & [15, 5]        &         20 &       20 \\
  \hline
-Linear2HiddenLayer         & 52.6 ± 0.0 &  0.41 & [15, 10, 3]    &         28 &       50 \\
+\multirow{6}{*}{Linear1HiddenLayer} & 50.6 ± 7.8  &  0.43 & [15, 5]        &         20 &      100 \\
+                                            & 50.6 ± 16.3 &  0.43 & [15, 10, 3]    &         28 &       20 \\
+                                            & 50.6 ± 7.8  &  0.43 & [15, 10, 3]    &         28 &      100 \\
+                                            & 50.6 ± 16.3 &  0.43 & [15, 5]        &         20 &       20 \\
+                                            & 50.5 ± 7.7  &  0.43 & [15, 10, 3]    &         28 &      200 \\
+                                            & 50.5 ± 7.7  &  0.43 & [15, 5]        &         20 &      200 \\
  \hline
-Linear1HiddenLayer         & 50.9 ± 0.0 &  0.43 & [8, 4]         &         12 &       50 \\
+RBFN                                & 50.5 ± 13.4 &  0.43 & [8, 4]         &         12 &       50 \\
  \hline
-Linear2HiddenLayer         & 50.4 ± 0.0 &  0.43 & [15, 10, 3]    &         28 &      100 \\
+\multirow{3}{*}{Linear1HiddenLayer} & 49.4 ± 9.7  &  0.44 & [15, 5]        &         20 &       50 \\
+                                            & 49.4 ± 9.7  &  0.44 & [15, 10, 3]    &         28 &       50 \\
+                                            & 48.7 ± 8.6  &  0.45 & [8, 4]         &         12 &       20 \\
  \hline
-\multirow{2}{*}{Linear1HiddenLayer}         & 48.6 ± 0.0 &  0.45 & [15, 5]        &         20 &       50 \\
-         & 48.6 ± 0.0 &  0.45 & [15, 10, 3]    &         28 &       50 \\
+\multirow{6}{*}{RBFN}               & 43.9 ± 18.2 &  0.49 & [15, 10, 3]    &         28 &      200 \\
+                                            & 43.9 ± 18.2 &  0.49 & [15, 5]        &         20 &      200 \\
+                                            & 43.5 ± 26.5 &  0.49 & [15, 10, 3]    &         28 &       50 \\
+                                            & 43.5 ± 26.5 &  0.49 & [15, 5]        &         20 &       50 \\
+                                            & 43.0 ± 20.0 &  0.5  & [15, 10, 3]    &         28 &      100 \\
+                                            & 43.0 ± 20.0 &  0.5  & [15, 5]        &         20 &      100 \\
  \hline
-Linear2HiddenLayer         & 44.6 ± 0.0 &  0.48 & [15, 5]        &         20 &       20 \\
+FFNN                                & 40.6 ± 34.8 &  0.52 & [8, 4]         &         12 &       20 \\
  \hline
-RBFN         & 43.5 ± 0.0 &  0.49 & [8, 4]         &         12 &       50 \\
+\multirow{2}{*}{Tanh2HiddenLayer}   & 38.0 ± 43.0 &  0.54 & [15, 5]        &         20 &      200 \\
+                                            & 37.4 ± 43.1 &  0.55 & [15, 5]        &         20 &      100 \\
  \hline
-Linear1HiddenLayer         & 41.2 ± 0.0 &  0.51 & [8, 4]         &         12 &       20 \\
+\multirow{3}{*}{FFNN}               & 36.9 ± 35.0 &  0.55 & [8, 4]         &         12 &      200 \\
+                                            & 36.8 ± 35.0 &  0.55 & [8, 4]         &         12 &      100 \\
+                                            & 36.1 ± 34.9 &  0.56 & [8, 4]         &         12 &       50 \\
  \hline
-Relu2HiddenLayer         & 31.6 ± 0.0 &  0.6  & [8, 4]         &         12 &       20 \\
+Tanh2HiddenLayer                    & 30.4 ± 44.7 &  0.61 & [15, 5]        &         20 &       50 \\
  \hline
-\multirow{2}{*}{RBFN}         & 22.0 ± 0.0 &  0.68 & [8, 4]         &         12 &      100 \\
-         & 19.8 ± 0.0 &  0.7  & [8, 4]         &         12 &      200 \\
+FFNN                                & 30.1 ± 36.9 &  0.61 & [15, 10, 3]    &         28 &       20 \\
  \hline
-\multirow{3}{*}{Relu2HiddenLayer}         & 13.4 ± 0.0 &  0.76 & [8, 4]         &         12 &      200 \\
-         & 8.7 ± 0.0  &  0.8  & [8, 4]         &         12 &      100 \\
-         & 5.4 ± 0.0  &  0.83 & [8, 4]         &         12 &       50 \\
+\multirow{2}{*}{RBFN}               & 29.9 ± 13.2 &  0.61 & [8, 4]         &         12 &      100 \\
+                                            & 28.5 ± 13.8 &  0.63 & [8, 4]         &         12 &      200 \\
  \hline
-\multirow{4}{*}{FFNN}         & 0.0 ± 0.0  &  0.88 & [15, 10, 3]    &         28 &      200 \\
-         & 0.0 ± 0.0  &  0.88 & [15, 10, 3]    &         28 &      100 \\
-         & 0.0 ± 0.0  &  0.88 & [15, 10, 3]    &         28 &       50 \\
-         & 0.0 ± 0.0  &  0.88 & [15, 10, 3]    &         28 &       20 \\
+\multirow{3}{*}{FFNN}               & 24.7 ± 32.0 &  0.66 & [15, 10, 3]    &         28 &      200 \\
+                                            & 18.3 ± 30.5 &  0.71 & [15, 10, 3]    &         28 &      100 \\
+                                            & 16.0 ± 31.2 &  0.74 & [15, 10, 3]    &         28 &       50 \\
  \hline
-\multirow{3}{*}{RBFN}         & -0.5 ± 0.0 &  0.88 & [8, 4]         &         12 &       20 \\
-         & -1.8 ± 0.0 &  0.89 & [15, 5]        &         20 &       20 \\
-         & -1.8 ± 0.0 &  0.89 & [15, 10, 3]    &         28 &       20 \\
+\multirow{3}{*}{RBFN}               & -2.0 ± 5.5  &  0.89 & [15, 5]        &         20 &       20 \\
+                                            & -2.0 ± 5.5  &  0.89 & [15, 10, 3]    &         28 &       20 \\
+                                            & -6.7 ± 4.7  &  0.93 & [8, 4]         &         12 &       20 \\
 \hline
 \end{tabular}
         \caption{Results of different models}
