--- a/NN/plots_latex.tex
+++ b/NN/plots_latex.tex
@@ -1,18 +1,6 @@
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.8\textwidth]{plots/Relu2HiddenLayer-R2-vs-Num-of-Epochs-HiddenSize-20.png}
-    \caption{Relu2HiddenLayer - R2 vs. Number of Epochs (Hidden Size: 20)}
-\end{figure}
-
-\begin{figure}[H]
-    \centering
-    \includegraphics[width=0.8\textwidth]{plots/Relu2HiddenLayer-R2-vs-Num-of-Epochs-HiddenSize-12.png}
-    \caption{Relu2HiddenLayer - R2 vs. Number of Epochs (Hidden Size: 12)}
-\end{figure}
-
-\begin{figure}[H]
-    \centering
     \includegraphics[width=0.8\textwidth]{plots/Tanh2HiddenLayer-R2-vs-Num-of-Epochs-HiddenSize-12.png}
     \caption{Tanh2HiddenLayer - R2 vs. Number of Epochs (Hidden Size: 12)}
 \end{figure}
@@ -25,30 +13,18 @@
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.8\textwidth]{plots/Linear2HiddenLayer-R2-vs-Num-of-Epochs-HiddenSize-12.png}
-    \caption{Linear2HiddenLayer - R2 vs. Number of Epochs (Hidden Size: 12)}
-\end{figure}
-
-\begin{figure}[H]
-    \centering
     \includegraphics[width=0.8\textwidth]{plots/Linear2HiddenLayer-R2-vs-Num-of-Epochs-HiddenSize-20.png}
     \caption{Linear2HiddenLayer - R2 vs. Number of Epochs (Hidden Size: 20)}
 \end{figure}
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.8\textwidth]{plots/FFNN-R2-vs-Num-of-Epochs-HiddenSize-20.png}
-    \caption{FFNN - R2 vs. Number of Epochs (Hidden Size: 20)}
+    \includegraphics[width=0.8\textwidth]{plots/Linear2HiddenLayer-R2-vs-Num-of-Epochs-HiddenSize-12.png}
+    \caption{Linear2HiddenLayer - R2 vs. Number of Epochs (Hidden Size: 12)}
 \end{figure}
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.8\textwidth]{plots/FFNN-R2-vs-Num-of-Epochs-HiddenSize-28.png}
-    \caption{FFNN - R2 vs. Number of Epochs (Hidden Size: 28)}
-\end{figure}
-
-\begin{figure}[H]
-    \centering
-    \includegraphics[width=0.8\textwidth]{plots/FFNN-R2-vs-Num-of-Epochs-HiddenSize-12.png}
-    \caption{FFNN - R2 vs. Number of Epochs (Hidden Size: 12)}
+    \includegraphics[width=0.8\textwidth]{plots/Tanh1HiddenLayer-R2-vs-Num-of-Epochs-HiddenSize-10.png}
+    \caption{Tanh1HiddenLayer - R2 vs. Number of Epochs (Hidden Size: 10)}
 \end{figure}
