--- a/NN/tables/backward.tex
+++ b/NN/tables/backward.tex
@@ -3,19 +3,19 @@
         \centering
         \begin{tabular}{lr}
 \hline
- features                                                                                                     &    R2 \\
+ features                                                                                                                                 &    R2 \\
 \hline
- flow\_rate1, conc\_nano1, Kfluid1, heat\_flux1, X\_D1, flow\_rate2, conc\_nano2, Kfluid2, heat\_flux2, X\_D2 & 82.69 \\
- conc\_nano1, Kfluid1, heat\_flux1, X\_D1, flow\_rate2, conc\_nano2, Kfluid2, heat\_flux2, X\_D2              & 62.45 \\
- flow\_rate1, Kfluid1, heat\_flux1, X\_D1, flow\_rate2, conc\_nano2, Kfluid2, heat\_flux2, X\_D2              & 81.63 \\
- flow\_rate1, conc\_nano1, heat\_flux1, X\_D1, flow\_rate2, conc\_nano2, Kfluid2, heat\_flux2, X\_D2          & 73.64 \\
- flow\_rate1, conc\_nano1, Kfluid1, X\_D1, flow\_rate2, conc\_nano2, Kfluid2, heat\_flux2, X\_D2              & 72.94 \\
- flow\_rate1, conc\_nano1, Kfluid1, heat\_flux1, flow\_rate2, conc\_nano2, Kfluid2, heat\_flux2, X\_D2        & 67.45 \\
- flow\_rate1, conc\_nano1, Kfluid1, heat\_flux1, X\_D1, conc\_nano2, Kfluid2, heat\_flux2, X\_D2              & 68.03 \\
- flow\_rate1, conc\_nano1, Kfluid1, heat\_flux1, X\_D1, flow\_rate2, Kfluid2, heat\_flux2, X\_D2              & 76.57 \\
- flow\_rate1, conc\_nano1, Kfluid1, heat\_flux1, X\_D1, flow\_rate2, conc\_nano2, heat\_flux2, X\_D2          & 38.28 \\
- flow\_rate1, conc\_nano1, Kfluid1, heat\_flux1, X\_D1, flow\_rate2, conc\_nano2, Kfluid2, X\_D2              & 69.39 \\
- flow\_rate1, conc\_nano1, Kfluid1, heat\_flux1, X\_D1, flow\_rate2, conc\_nano2, Kfluid2, heat\_flux2        & 81.61 \\
+ SG Coating, Temp Alk Sol, NaOH Wt\%, Dip Time Alk (min), pH Sol, Hydro Time (h), Dip Time Sol (s), Clay Conc, Cure Time (min), Cure Temp & 77.62 \\
+ Temp Alk Sol, NaOH Wt\%, Dip Time Alk (min), pH Sol, Hydro Time (h), Dip Time Sol (s), Clay Conc, Cure Time (min), Cure Temp             & 51.9  \\
+ SG Coating, NaOH Wt\%, Dip Time Alk (min), pH Sol, Hydro Time (h), Dip Time Sol (s), Clay Conc, Cure Time (min), Cure Temp               & 51.9  \\
+ SG Coating, Temp Alk Sol, Dip Time Alk (min), pH Sol, Hydro Time (h), Dip Time Sol (s), Clay Conc, Cure Time (min), Cure Temp            & 51.9  \\
+ SG Coating, Temp Alk Sol, NaOH Wt\%, pH Sol, Hydro Time (h), Dip Time Sol (s), Clay Conc, Cure Time (min), Cure Temp                     & 74.59 \\
+ SG Coating, Temp Alk Sol, NaOH Wt\%, Dip Time Alk (min), Hydro Time (h), Dip Time Sol (s), Clay Conc, Cure Time (min), Cure Temp         & 46.26 \\
+ SG Coating, Temp Alk Sol, NaOH Wt\%, Dip Time Alk (min), pH Sol, Dip Time Sol (s), Clay Conc, Cure Time (min), Cure Temp                 & 69.37 \\
+ SG Coating, Temp Alk Sol, NaOH Wt\%, Dip Time Alk (min), pH Sol, Hydro Time (h), Clay Conc, Cure Time (min), Cure Temp                   & 62.26 \\
+ SG Coating, Temp Alk Sol, NaOH Wt\%, Dip Time Alk (min), pH Sol, Hydro Time (h), Dip Time Sol (s), Cure Time (min), Cure Temp            & 34.36 \\
+ SG Coating, Temp Alk Sol, NaOH Wt\%, Dip Time Alk (min), pH Sol, Hydro Time (h), Dip Time Sol (s), Clay Conc, Cure Temp                  & 64.92 \\
+ SG Coating, Temp Alk Sol, NaOH Wt\%, Dip Time Alk (min), pH Sol, Hydro Time (h), Dip Time Sol (s), Clay Conc, Cure Time (min)            & 62.82 \\
 \hline
 \end{tabular}
         \caption{Results of Backward Feature Elimination}
