--- a/NN/tables/forward.tex
+++ b/NN/tables/forward.tex
@@ -1,50 +1,39 @@
 
-    \begin{table*}
+    \begin{table*}[h]
         \centering
         \begin{tabular}{lr}
 \hline
- features                                                             &    R2 \\
+ features                                                         &     R2 \\
 \hline
- X\_D1                                                                & 14.85 \\
- flow\_rate2                                                          & 27.69 \\
- conc\_nano2                                                          & 11.15 \\
- Kfluid2                                                              & 62.66 \\
- heat\_flux2                                                          & -4.92 \\
- flow\_rate1, Kfluid2                                                 & 75.33 \\
- conc\_nano1, Kfluid2                                                 & 64.49 \\
- Kfluid1, Kfluid2                                                     & 67.9  \\
- heat\_flux1, Kfluid2                                                 & 74.3  \\
- X\_D1, Kfluid2                                                       & 67.3  \\
- flow\_rate2, Kfluid2                                                 &  9.94 \\
- conc\_nano2, Kfluid2                                                 & 87.59 \\
- heat\_flux2, Kfluid2                                                 & 56.8  \\
- X\_D2, Kfluid2                                                       & 67.59 \\
- flow\_rate1, Kfluid2, conc\_nano2                                    & 60.42 \\
- conc\_nano1, Kfluid2, conc\_nano2                                    & 78.36 \\
- Kfluid1, Kfluid2, conc\_nano2                                        & 79.88 \\
- heat\_flux1, Kfluid2, conc\_nano2                                    & 90.37 \\
- X\_D1, Kfluid2, conc\_nano2                                          & 84.51 \\
- flow\_rate2, Kfluid2, conc\_nano2                                    & 65.14 \\
- heat\_flux2, Kfluid2, conc\_nano2                                    & 57.1  \\
- X\_D2, Kfluid2, conc\_nano2                                          & 54.6  \\
- flow\_rate1, Kfluid2, conc\_nano2, heat\_flux1                       & 62.62 \\
- conc\_nano1, Kfluid2, conc\_nano2, heat\_flux1                       & 92.87 \\
- Kfluid1, Kfluid2, conc\_nano2, heat\_flux1                           & 80.94 \\
- X\_D1, Kfluid2, conc\_nano2, heat\_flux1                             & 87.63 \\
- flow\_rate2, Kfluid2, conc\_nano2, heat\_flux1                       & 82.76 \\
- heat\_flux2, Kfluid2, conc\_nano2, heat\_flux1                       & 55.75 \\
- X\_D2, Kfluid2, conc\_nano2, heat\_flux1                             & 75.43 \\
- flow\_rate1, Kfluid2, conc\_nano2, heat\_flux1, conc\_nano1          & 49.56 \\
- Kfluid1, Kfluid2, conc\_nano2, heat\_flux1, conc\_nano1              & 93.06 \\
- X\_D1, Kfluid2, conc\_nano2, heat\_flux1, conc\_nano1                & 87.49 \\
- flow\_rate2, Kfluid2, conc\_nano2, heat\_flux1, conc\_nano1          & 69.35 \\
- heat\_flux2, Kfluid2, conc\_nano2, heat\_flux1, conc\_nano1          & 65.5  \\
- X\_D2, Kfluid2, conc\_nano2, heat\_flux1, conc\_nano1                & 64.18 \\
- flow\_rate1, Kfluid2, conc\_nano2, heat\_flux1, conc\_nano1, Kfluid1 & 84.19 \\
- X\_D1, Kfluid2, conc\_nano2, heat\_flux1, conc\_nano1, Kfluid1       & 87.54 \\
- flow\_rate2, Kfluid2, conc\_nano2, heat\_flux1, conc\_nano1, Kfluid1 & 76.61 \\
- heat\_flux2, Kfluid2, conc\_nano2, heat\_flux1, conc\_nano1, Kfluid1 & 71.81 \\
- X\_D2, Kfluid2, conc\_nano2, heat\_flux1, conc\_nano1, Kfluid1       & 77.34 \\
+ pH Sol                                                           &  14.56 \\
+ Hydro Time (h)                                                   &  26.4  \\
+ Dip Time Sol (s)                                                 &  11.24 \\
+ Clay Conc                                                        &  64.24 \\
+ Cure Time (min)                                                  &   0.1  \\
+ SG Coating, Clay Conc                                            &  64.93 \\
+ Temp Alk Sol, Clay Conc                                          &  64.93 \\
+ NaOH Wt\%, Clay Conc                                             &  64.93 \\
+ Dip Time Alk (min), Clay Conc                                    &  79.07 \\
+ pH Sol, Clay Conc                                                &  62.87 \\
+ Hydro Time (h), Clay Conc                                        & -15.61 \\
+ Dip Time Sol (s), Clay Conc                                      &  80.99 \\
+ Cure Time (min), Clay Conc                                       &  74.1  \\
+ Cure Temp, Clay Conc                                             &  66.68 \\
+ SG Coating, Clay Conc, Dip Time Sol (s)                          &  81.03 \\
+ Temp Alk Sol, Clay Conc, Dip Time Sol (s)                        &  81.03 \\
+ NaOH Wt\%, Clay Conc, Dip Time Sol (s)                           &  81.03 \\
+ Dip Time Alk (min), Clay Conc, Dip Time Sol (s)                  &  93.94 \\
+ pH Sol, Clay Conc, Dip Time Sol (s)                              &  83.22 \\
+ Hydro Time (h), Clay Conc, Dip Time Sol (s)                      &  56.92 \\
+ Cure Time (min), Clay Conc, Dip Time Sol (s)                     &  60.09 \\
+ Cure Temp, Clay Conc, Dip Time Sol (s)                           &  60.67 \\
+ SG Coating, Clay Conc, Dip Time Sol (s), Dip Time Alk (min)      &  85.55 \\
+ Temp Alk Sol, Clay Conc, Dip Time Sol (s), Dip Time Alk (min)    &  85.55 \\
+ NaOH Wt\%, Clay Conc, Dip Time Sol (s), Dip Time Alk (min)       &  85.55 \\
+ pH Sol, Clay Conc, Dip Time Sol (s), Dip Time Alk (min)          &  77.04 \\
+ Hydro Time (h), Clay Conc, Dip Time Sol (s), Dip Time Alk (min)  &  75.85 \\
+ Cure Time (min), Clay Conc, Dip Time Sol (s), Dip Time Alk (min) &  71.81 \\
+ Cure Temp, Clay Conc, Dip Time Sol (s), Dip Time Alk (min)       &  63.33 \\
 \hline
 \end{tabular}
         \caption{Results of Forward Feature Selection for different features}
