--- a/NN/tables/jackknife.tex
+++ b/NN/tables/jackknife.tex
@@ -1,20 +1,20 @@
 
-    \begin{table*}
+    \begin{table*}[h]
         \centering
         \begin{tabular}{lrr}
 \hline
- Feature     &   Sensitivity &   Variance \\
+ Feature            &   Sensitivity &    Variance \\
 \hline
- Kfluid2     &       4.82179 &   401.356  \\
- heat\_flux2 &       3.89074 &   224.65   \\
- X\_D1       &      -1.47476 &   501.868  \\
- X\_D2       &      -1.64904 &   234.985  \\
- Kfluid1     &      -7.38787 &   462.004  \\
- flow\_rate1 &     -11.5723  &   420.514  \\
- flow\_rate2 &     -17.386   &   165.634  \\
- conc\_nano1 &     -19.2583  &   623.708  \\
- conc\_nano2 &     -23.7143  &    34.6234 \\
- heat\_flux1 &     -25.1771  &   106.623  \\
+ Clay Conc          &      53.5718  & 0           \\
+ Cure Temp          &      -1.89957 & 2.01948e-28 \\
+ Cure Time (min)    &      -6.29477 & 2.01948e-28 \\
+ Dip Time Sol (s)   &      -9.4163  & 2.01948e-28 \\
+ SG Coating         &     -12.1679  & 2.01948e-28 \\
+ Temp Alk Sol       &     -12.1679  & 2.01948e-28 \\
+ NaOH Wt\%          &     -12.1679  & 2.01948e-28 \\
+ pH Sol             &     -13.4318  & 0           \\
+ Dip Time Alk (min) &     -14.7658  & 2.01948e-28 \\
+ Hydro Time (h)     &     -14.9093  & 0           \\
 \hline
 \end{tabular}
         \caption{Results of Jackknife Sensitivity Analysis}
