--- a/NN/tables/results.tex
+++ b/NN/tables/results.tex
@@ -1,59 +1,37 @@
 
-    \begin{table*}[h]
-        \centering
-        \begin{tabular}{llrlrr}
+        \begin{longtable}{llrlrr}
 \hline
- model                                      & R2          &   MSE & hidden sizes   &   total hs &   epochs \\
+ model   & R2          &   MSE & hidden sizes   &   total hs &   epochs \\
 \hline
  \hline
-\multirow{5}{*}{Relu2HiddenLayer}   & 92.4 ± 6.4  &  0.07 & [15, 5]        &         20 &       20 \\
-                                            & 79.9 ± 26.3 &  0.18 & [15, 5]        &         20 &      100 \\
-                                            & 79.5 ± 28.3 &  0.18 & [15, 5]        &         20 &      200 \\
-                                            & 78.2 ± 29.4 &  0.19 & [15, 5]        &         20 &       50 \\
-                                            & 77.6 ± 23.6 &  0.2  & [8, 4]         &         12 &       20 \\
+\multirow{7}{*}{Tanh2HiddenLayer}         & 89.1 ± 2.4  &  0.1  & [8, 4]         &         12 &      100 \\
+         & 88.4 ± 4.2  &  0.1  & [8, 4]         &         12 &      200 \\
+         & 87.1 ± 3.6  &  0.11 & [8, 4]         &         12 &       50 \\
+         & 69.2 ± 19.3 &  0.27 & [8, 4]         &         12 &       20 \\
+         & 65.9 ± 39.4 &  0.3  & [15, 5]        &         20 &      100 \\
+         & 63.6 ± 40.1 &  0.32 & [15, 5]        &         20 &      200 \\
+         & 58.2 ± 45.4 &  0.37 & [15, 5]        &         20 &       50 \\
  \hline
-Tanh2HiddenLayer                    & 76.3 ± 19.1 &  0.21 & [8, 4]         &         12 &       50 \\
+Linear2HiddenLayer         & 57.6 ± 11.9 &  0.37 & [15, 5]        &         20 &       20 \\
  \hline
-\multirow{2}{*}{Relu2HiddenLayer}   & 70.7 ± 27.6 &  0.26 & [8, 4]         &         12 &      200 \\
-                                            & 69.4 ± 28.5 &  0.27 & [8, 4]         &         12 &      100 \\
+Tanh2HiddenLayer         & 57.2 ± 25.4 &  0.37 & [15, 5]        &         20 &       20 \\
  \hline
-\multirow{4}{*}{Tanh2HiddenLayer}   & 67.5 ± 11.5 &  0.28 & [15, 5]        &         20 &      200 \\
-                                            & 66.5 ± 35.4 &  0.29 & [8, 4]         &         12 &      100 \\
-                                            & 66.2 ± 10.7 &  0.3  & [15, 5]        &         20 &      100 \\
-                                            & 65.6 ± 14.9 &  0.3  & [15, 5]        &         20 &       50 \\
+Tanh1HiddenLayer         & 57.0 ± 8.3  &  0.38 & [10]           &         10 &       20 \\
  \hline
-Relu2HiddenLayer                    & 65.5 ± 33.4 &  0.3  & [8, 4]         &         12 &       50 \\
+\multirow{7}{*}{Linear2HiddenLayer}         & 54.0 ± 1.1  &  0.4  & [15, 5]        &         20 &      200 \\
+         & 53.9 ± 1.1  &  0.4  & [15, 5]        &         20 &      100 \\
+         & 53.4 ± 2.1  &  0.41 & [15, 5]        &         20 &       50 \\
+         & 52.7 ± 4.4  &  0.41 & [8, 4]         &         12 &       50 \\
+         & 51.7 ± 4.6  &  0.42 & [8, 4]         &         12 &      100 \\
+         & 51.7 ± 4.7  &  0.42 & [8, 4]         &         12 &      200 \\
+         & 49.8 ± 11.3 &  0.44 & [8, 4]         &         12 &       20 \\
  \hline
-\multirow{2}{*}{Tanh2HiddenLayer}   & 64.1 ± 41.8 &  0.31 & [8, 4]         &         12 &      200 \\
-                                            & 63.6 ± 20.7 &  0.32 & [15, 5]        &         20 &       20 \\
- \hline
-\multirow{4}{*}{Linear2HiddenLayer} & 55.1 ± 0.9  &  0.39 & [8, 4]         &         12 &       50 \\
-                                            & 54.7 ± 0.3  &  0.4  & [8, 4]         &         12 &      200 \\
-                                            & 54.7 ± 0.2  &  0.4  & [8, 4]         &         12 &      100 \\
-                                            & 54.1 ± 3.2  &  0.4  & [15, 5]        &         20 &       50 \\
- \hline
-Tanh2HiddenLayer                    & 53.8 ± 31.9 &  0.4  & [8, 4]         &         12 &       20 \\
- \hline
-\multirow{4}{*}{Linear2HiddenLayer} & 53.7 ± 1.3  &  0.41 & [15, 5]        &         20 &      200 \\
-                                            & 53.6 ± 1.4  &  0.41 & [15, 5]        &         20 &      100 \\
-                                            & 53.4 ± 5.7  &  0.41 & [8, 4]         &         12 &       20 \\
-                                            & 52.5 ± 11.8 &  0.42 & [15, 5]        &         20 &       20 \\
- \hline
-\multirow{12}{*}{FFNN}              & 17.7 ± 30.8 &  0.72 & [15, 5]        &         20 &       50 \\
-                                            & 16.9 ± 31.0 &  0.73 & [15, 5]        &         20 &      100 \\
-                                            & 16.7 ± 30.7 &  0.73 & [15, 5]        &         20 &      200 \\
-                                            & 15.3 ± 30.7 &  0.74 & [15, 5]        &         20 &       20 \\
-                                            & 14.3 ± 28.6 &  0.75 & [15, 10, 3]    &         28 &       20 \\
-                                            & 14.3 ± 28.6 &  0.75 & [15, 10, 3]    &         28 &       50 \\
-                                            & 13.6 ± 27.2 &  0.76 & [15, 10, 3]    &         28 &      100 \\
-                                            & 13.5 ± 27.0 &  0.76 & [15, 10, 3]    &         28 &      200 \\
-                                            & 0.0 ± 0.0   &  0.88 & [8, 4]         &         12 &       20 \\
-                                            & 0.0 ± 0.0   &  0.88 & [8, 4]         &         12 &       50 \\
-                                            & 0.0 ± 0.0   &  0.88 & [8, 4]         &         12 &      100 \\
-                                            & 0.0 ± 0.0   &  0.88 & [8, 4]         &         12 &      200 \\
+\multirow{3}{*}{Tanh1HiddenLayer}         & 35.6 ± 35.6 &  0.56 & [10]           &         10 &      100 \\
+         & 34.2 ± 40.9 &  0.58 & [10]           &         10 &       50 \\
+         & 33.8 ± 37.8 &  0.58 & [10]           &         10 &      200 \\
 \hline
-\end{tabular}
-        \caption{Results of different models}
-        \label{models}
-    \end{table*}
+       \caption{Results of different models}
+\label{models}
+
+\end{longtable}
     
