--- a/NN/tables/weight-analysis.tex
+++ b/NN/tables/weight-analysis.tex
@@ -1,19 +1,20 @@
 
-    \begin{table*}
+    \begin{table*}[h]
         \centering
         \begin{tabular}{lr}
 \hline
- Feature     &   Weight Importance \\
+ Feature            &   Weight Importance \\
 \hline
- X\_D2       &            0.681455 \\
- X\_D1       &            0.617036 \\
- heat\_flux2 &            0.613336 \\
- heat\_flux1 &            0.612263 \\
- Kfluid2     &            0.512448 \\
- conc\_nano2 &            0.490265 \\
- flow\_rate1 &            0.426227 \\
- Kfluid1     &            0.419663 \\
- conc\_nano1 &            0.390698 \\
+ Cure Time (min)    &            0.590329 \\
+ Cure Temp          &            0.516585 \\
+ Clay Conc          &            0.482741 \\
+ Hydro Time (h)     &            0.468115 \\
+ SG Coating         &            0.4411   \\
+ Dip Time Alk (min) &            0.411237 \\
+ Temp Alk Sol       &            0.368222 \\
+ NaOH Wt\%          &            0.343663 \\
+ Dip Time Sol (s)   &            0.297781 \\
+ pH Sol             &            0.294155 \\
 \hline
 \end{tabular}
         \caption{Results of Weight Analysis}
