--- a/NN/view.tex
+++ b/NN/view.tex
@@ -4,6 +4,8 @@
 \usepackage{makecell}
 \usepackage{booktabs}
 \usepackage{caption}
+\usepackage{longtable}
+\usepackage{landscape}
 \usepackage{graphicx}  % Package for including graphics
 \usepackage{float}  % Package to fix the placement of figures
 
